<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16sp">

    <TextView
        android:text="@string/str_agregar_medida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_medida"
        android:hint="@string/str_medida"
        android:maxLength="20" />

    <TextView
        android:text="@string/str_agregar_abreviatura"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edt_abr"
        android:hint="@string/str_abreviatura"
        android:maxLength="5"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10sp"
        tools:ignore="SmallSp" />

    <Button
        android:text="@string/aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="14sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/color1"
        android:id="@+id/btn_insertarmedida" />
</LinearLayout>