<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.gcr.android.inventorytest.EditarClienteActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UnknownIdInLayout,UselessParent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/btn_guardarcliente">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_nombre"
            android:hint="@string/str_nombre"
            android:maxLength="50" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edt_apellidos"
            android:hint="@string/str_apellidos"
            android:maxLength="60" />

        <EditText
            android:layout_width="match_parent"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/edt_direccion"
            android:hint="@string/str_direccion"
            android:maxLength="200"
            android:layout_height="80sp"
            android:gravity="bottom" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edt_telefono"
            android:hint="@string/str_telefono"
            android:maxLength="12" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edt_correo"
            android:hint="@string/str_correo"
            android:maxLength="60" />

    </LinearLayout>

    <Button
        android:text="@string/aceptar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnguardarcliente"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textSize="14sp"
        android:background="@color/colorPrimary"
        android:textColor="@color/color1"
        android:layout_alignParentBottom="true" />
</RelativeLayout>
