<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_nombre_del_producto"
                android:id="@+id/textViewNombrePro"
                android:textSize="25dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_numerodelote"
                    android:id="@+id/textView5"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textViewNumeroLote"
                    android:textSize="20dp"
                    tools:ignore="SpUsage" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/str_cantidadp"
                    android:id="@+id/textView8"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    tools:ignore="SpUsage" />

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/editTextCantidad"
                    android:hint="@string/str_cantidad"
                    android:inputType="numberDecimal" />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_fecha_de_caducidad"
                android:id="@+id/checkBoxfechaC"
                android:checked="false"
                android:textSize="20dp"
                tools:ignore="SpUsage" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="5dp">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_agregar"
                android:id="@+id/buttonAF"
                android:visibility="invisible" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewVerFecha"
                android:textSize="20dp"
                android:visibility="invisible"
                tools:ignore="SpUsage" />

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_detalles"
                android:textColor="#ffffff"
                android:background="@color/colorPrimary"
                android:id="@+id/ButtonDetalles" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>