<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="HardcodedText,RtlHardcoded"
            android:textSize="18sp"
            android:layout_marginRight="5sp" />

        <TextView
            android:text="@string/fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtfecha"
            android:textAlignment="textStart"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:text="@string/str_nombre_del_cliente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:textSize="18sp" />

    <TextView
        android:text="@string/str_cliente2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtcliente"
        android:textStyle="normal|bold"
        android:textAllCaps="true"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5sp"
        tools:ignore="DisableBaselineAlignment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView24"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="@string/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txttotal"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:text="@string/str_deuda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:text="$3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtdeuda"
                tools:ignore="HardcodedText"
                android:textStyle="normal|bold"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:text="@string/str_pagov2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="HardcodedText"
                android:textStyle="normal|bold"
                android:id="@+id/txtpago"
                android:textAlignment="center"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>